crates/python_parser/tests/snapshots/invalid_syntax@params_non_default_after_default.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/params_non_default_after_default.py
---
## AST

```
Module(
    ModModule {
        range: 0..30,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..29,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..24,
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..12,
                                parameter: Parameter {
                                    range: 8..9,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 10..12,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                            ParameterWithDefault {
                                range: 14..15,
                                parameter: Parameter {
                                    range: 14..15,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 14..15,
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 17..23,
                                parameter: Parameter {
                                    range: 17..23,
                                    name: Identifier {
                                        id: Name("c"),
                                        range: 17..18,
                                    },
                                    annotation: Some(
                                        Name(
                                            NameExpr {
                                                range: 20..23,
                                                id: Name("int"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 26..29,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 26..29,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a=10, b, c: int): ...
  |               ^ Syntax Error: Parameter without a default cannot follow a parameter with a default
  |


  |
1 | def foo(a=10, b, c: int): ...
  |                  ^^^^^^ Syntax Error: Parameter without a default cannot follow a parameter with a default
  |
